# duckhunt

./: .gitignore  LICENSE  README.md  build.py  icon.py  pyproject.toml  pyrefly.toml  version_info.template
.github/workflows/: release.yml
duckhunt/: __init__.py  __main__.py  config.py  detector.py  gui.py  policies.py
duckhunt_win/: __init__.py  __main__.py  config.py  controller.py  daemon.py  detector.py  ipc.py  utils.py  watchdog.py
duckhunt_win/core/: session_monitor.py
duckhunt_win/gui/: settings.py  tray.py
duckhunt_win/resources/: __init__.py  duckhunt.default.conf
