[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckhunt"
version = "1.0.0"
description = "Prevent RubberDucky and keystroke injection attacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pedro M. Sosa" },
]
maintainers = [
    { name = "qb20nh" },
]
keywords = ["security", "rubberducky", "keystroke-injection", "usb-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pywin32>=306",
    "pyhook3>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
duckhunt = "duckhunt.__main__:main"

[project.gui-scripts]
duckhunt-gui = "duckhunt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["duckhunt"]
